# detsys-srv

./: Cargo.toml  LICENSE.txt  README.md  README.tpl  flake.nix
.github/workflows/: rust.yml
src/: lib.rs  record.rs
src/client/: mod.rs  policy.rs
src/resolver/: hickory.rs  mod.rs  trust_dns.rs
src/resolver/libresolv/: ffi.rs
