[package]
name = "srv-rs-upd"
version = "0.2.0"
authors = ["Determinate Systems, Inc. <hello@determinate.systems>"]
edition = "2021"
description = "Rust client for communicating with SRV-located services"
readme = "README.md"
homepage = "https://github.com/DeterminateSystems/srv-rs"
repository = "https://github.com/DeterminateSystems/srv-rs"
license = "BSD-3-Clause"
keywords = ["srv", "record", "dns", "resolve", "libresolv"]
categories = ["network-programming"]

[lib]
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["log"]

libresolv = ["libresolv-sys"]
log = ["tracing"]
trust-dns = ["trust-dns-resolver"]

[dependencies]
arc-swap = "1.0"
async-trait = "0.1"
futures-util = "0.3"
http = "1.2"
libresolv-sys = { version = "0.2", optional = true }
rand = "0.9"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
hyper = "1.6"
tokio = { version = "1.43", features = ["macros"] }

[[bench]]
name = "client"
harness = false

[[bench]]
name = "resolver"
harness = false
