[package]
name = "detsys-srv"
version = "0.2.0"
authors = ["Determinate Systems, Inc. <hello@determinate.systems>"]
edition = "2021"
description = "Rust client for communicating with SRV-located services"
readme = "README.md"
homepage = "https://github.com/DeterminateSystems/srv-rs"
repository = "https://github.com/DeterminateSystems/srv-rs"
license = "BSD-3-Clause"
keywords = ["srv", "record", "dns", "resolve"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.0"
async-trait = "0.1"
futures-util = "0.3"
http = "1.2"
rand = "0.9"
thiserror = "2.0"
tracing = { version = "0.1" }
trust-dns-resolver = { version = "0.23" }
url = "2.5.4"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
hyper = "1.6"
tokio = { version = "1.43", features = ["macros"] }
