[package]
name = "detsys-srv"
version = "0.3.0"
authors = ["Determinate Systems, Inc. <hello@determinate.systems>"]
edition = "2021"
description = "Rust client for communicating with SRV-located services"
readme = "README.md"
homepage = "https://github.com/DeterminateSystems/detsys-srv"
repository = "https://github.com/DeterminateSystems/detsys-srv"
license = "BSD-3-Clause"
keywords = ["srv", "record", "dns", "resolve"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.0"
async-trait = "0.1"
futures-util = "0.3"
http = "1.2"
rand = "0.9"
thiserror = "2.0"
tracing = { version = "0.1" }
hickory-resolver = { version = "0.24" }
url = "2.5.4"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
hyper = "1.6"
tokio = { version = "1.43", features = ["macros"] }
